--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,7 +29,7 @@
 
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
-  --nav-color: #828c91;  /* The default color of the main navmenu links */
+  --nav-color: #646464;  /* The default color of the main navmenu links */
   --nav-hover-color: #009cea; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
@@ -144,14 +144,18 @@ h6 {
 --------------------------------------------------------------*/
 .header {
   color: var(--default-color);
-  background-color: var(--background-color);
+  background: var(--background-color);
   padding: 15px 0;
   transition: all 0.5s;
   z-index: 997;
+  
+
 }
 
 .header .logo {
   line-height: 1;
+  transform: scale(1.6);
+  margin-left: 25px;
 }
 
 .header .logo img {
@@ -184,11 +188,6 @@ h6 {
 
 .header .header-social-links a i {
   line-height: 0px;
-}
-
-/*In case of Yellow logo remove filter*/
-.logo{
-  transform: scale(1.6);
 }
 
 @media (max-width: 1200px) {
@@ -317,6 +316,20 @@ h6 {
     left: -100%;
     visibility: visible;
   }
+
+  .header {
+    padding-top: 11px;
+    padding-bottom: 13px;
+    background: rgba(173, 170, 170, 0.336); 
+    backdrop-filter: blur(13px); /**PRoblem */
+    -webkit-backdrop-filter: blur(13px); 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  }
+
+  .header .logo {
+    margin-left: 0;
+    transform: scale(1.9);
+  }
 }
 
 /* Navmenu - Mobile */
@@ -443,6 +456,16 @@ h6 {
 
   .mobile-nav-active .navmenu>ul {
     display: block;
+  }
+
+  .header {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  }
+  .header .logo {
+    margin-left: 40px;
+    transform: scale(1.6);
   }
 }
 
