--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -324,13 +324,33 @@ h6 {
     backdrop-filter: blur(13px); /**PRoblem */
     -webkit-backdrop-filter: blur(13px); 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    max-height: min-content;
   }
 
   .header .logo {
     margin-left: 0;
-    transform: scale(1.9);
   }
+
+   .header .sow-logo {
+    transform: scale(1);
+  }
+
+  .header .clg-logo {
+    margin-left: 5px;
+    transform: scale(0.8);
+  }
+
+  .header .container .null-space {
+    visibility: hidden;
+    transform: scale(0.1);
+  }
+  #second-logo{
+    display: none;
+  }
+  
 }
+
+
 
 /* Navmenu - Mobile */
 @media (max-width: 1199px) {
@@ -460,13 +480,40 @@ h6 {
 
   .header {
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 25px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
   }
-  .header .logo {
-    margin-left: 40px;
-    transform: scale(1.6);
+
+  .header .container {
+    display: flex;
+    justify-content: space-between; /* Space between items */
+    align-items: center; /* Align items vertically */
   }
+
+  .header .logo {
+   /*margin-left: ;*/
+  }
+
+  .header .sow-logo {
+    margin-left: 2.1rem;
+    transform: scale(1.1);
+  }
+  .header .clg-logo {
+    
+    
+  }
+  #main-logo{
+    display: none;
+  }
+  #second-logo{
+    display: none;
+    transform: scale(0.5);
+  }
+
+  .scroll-top{
+    padding: 28px;
+  }
+  
 }
 
 /*--------------------------------------------------------------
